--- a/src/components/ProjectPreview/ProjectPreview.scss
+++ b/src/components/ProjectPreview/ProjectPreview.scss
@@ -52,6 +52,7 @@
       text-transform: capitalize;
       border: none;
       transition: 0.8s;
+      font-weight: 700;
       &:hover {
         background-color: $second-color;
       }
