--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,17 +1,17 @@
 //pallte 1
-$first-color: #f7f7f7;
-$second-color: #ff0083;
-$third-color: #282828;
+// $first-color: #f7f7f7;
+// $second-color: #ff0083;
+// $third-color: #282828;
 
-//pallte 2
-// $first-color: #99A8A8;
-// $second-color: #E5EDED;
-// $third-color: #718E8E;
+// pallte 2
+// $first-color: #99a8a8;
+// $second-color: #e5eded;
+// $third-color: #718e8e;
 
 //pallte 3
-// $first-color: #0E2A47;
-// $second-color: #FBFCFF;
-// $third-color: #1593FF;
+$first-color: #0e2a47;
+$second-color: #fbfcff;
+$third-color: #1593ff;
 
 //pallte 4
 // $first-color: #FFFFFF;
