--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,9 @@
 .header {
   padding: 20px;
   background-color: $third-color;
+  position: fixed;
+  z-index: 5;
+  width: 100%;
   a {
     padding: 15px;
     text-transform: capitalize;
