--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,40 +1,66 @@
-
 @mixin absCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+  overflow: hidden;
+  &:before {
+    display: block;
+    content: '';
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+  > * {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  > img {
+    object-fit: cover;
+  }
 }
 
 //media query
 //1em=16px
 // em and rem in media query always equall fs from browser =16px unless user change it.
 //rem failed work with some of browrswers
-@mixin respon ($breakpoint) {
-    @if $breakpoint==phone {
-        @media(max-width: 37.5em) { //600px
-            @content
-        }
-    };
-    @if $breakpoint==700px {
-        @media(max-width: 43.75em) { //700px
-            @content
-        }
-    };
-    @if $breakpoint==tab-port {
-        @media(max-width: 56.25em) { //900px
-            @content
-        }
-    };
-   
-    @if $breakpoint==tab-land {
-        @media(max-width:75em) { //1200px
-            @content
-        }
-    };
-    @if $breakpoint==big-desktop { //1800px
-        @media(min-width: 112.5em) {
-            @content
-        }
-    };
+@mixin respon($breakpoint) {
+  @if $breakpoint==phone {
+    @media (max-width: 37.5em) {
+      //600px
+      @content;
+    }
+  }
+  @if $breakpoint==700px {
+    @media (max-width: 43.75em) {
+      //700px
+      @content;
+    }
+  }
+  @if $breakpoint==tab-port {
+    @media (max-width: 56.25em) {
+      //900px
+      @content;
+    }
+  }
+
+  @if $breakpoint==tab-land {
+    @media (max-width: 75em) {
+      //1200px
+      @content;
+    }
+  }
+  @if $breakpoint==big-desktop {
+    //1800px
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
 }
