--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,11 +9,16 @@
 // $third-color: #718e8e;
 
 //pallte 3
-$first-color: #0e2a47;
-$second-color: #fbfcff;
-$third-color: #1593ff;
+// $first-color: #0e2a47;
+// $second-color: #fbfcff;
+// $third-color: #1593ff;
 
 //pallte 4
-// $first-color: #FFFFFF;
-// $second-color: #0073EA;
-// $third-color: #292F4C;
+// $first-color: #ffffff;
+// $second-color: #0073ea;
+// $third-color: #292f4c;
+
+//pallte 5
+$first-color: #fafafa;
+$second-color: #131313;
+$third-color: #6d6868;
