--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -104,4 +104,14 @@
   text-transform: capitalize;
   font-family: roboto-mono;
   font-weight: 700;
+  text-align: center;
+}
+
+.subtitle {
+  font-size: 30px;
+  color: $second-color;
+  text-transform: capitalize;
+  font-family: roboto-mono;
+  font-weight: 700;
+  text-align: center;
 }
