--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -37,10 +37,13 @@ ul {
 .app {
   height: 100%;
 }
-a {
+a,
+a:hover,
+a:focus,
+a:active {
   text-decoration: none;
+  color: inherit;
 }
-
 section {
   padding: 80px 0;
 }
