--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -115,3 +115,15 @@
   font-weight: 700;
   text-align: center;
 }
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+// .pointer {
+//   cursor: pointer;
+// }
