--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -10,7 +10,7 @@
       padding: 20px;
       border-radius: 15px;
       cursor: pointer;
-
+      transition: 0.6s;
       &:hover {
         background-color: $second-color;
       }
