--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -33,13 +33,13 @@
   font-weight: 400;
 }
 @font-face {
-  font-family: roboto-mono;
+  font-family: roboto;
   src: url('assets/fonts/roboto/Roboto-Light.ttf');
   font-weight: 300;
 }
 
 @font-face {
-  font-family: roboto-mono;
+  font-family: roboto;
   src: url('assets/fonts/roboto/Roboto-Thin.ttf');
   font-weight: 100;
 }
