--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -2,6 +2,9 @@
 .hero {
   height: 100vh;
   padding-top: 100px;
+  background-image: url('../../assets/bgc.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
   .title {
     padding: 40px;
   }
