--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -4,9 +4,9 @@
 // $third-color: #282828;
 
 // pallte 2
-// $first-color: #99a8a8;
-// $second-color: #e5eded;
-// $third-color: #718e8e;
+$first-color: #99a8a8;
+$second-color: #e5eded;
+$third-color: #718e8e;
 
 //pallte 3
 // $first-color: #0e2a47;
@@ -19,6 +19,6 @@
 // $third-color: #292f4c;
 
 //pallte 5
-$first-color: #fafafa;
-$second-color: #131313;
-$third-color: #60992d;
+// $first-color: #fafafa;
+// $second-color: #131313;
+// $third-color: #b08b5d;
