--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -21,6 +21,18 @@
       font-weight: bold;
     }
   }
+
+  .desc {
+    line-height: 1.3;
+
+    ul {
+      list-style: square;
+    }
+    li {
+      font-weight: 100;
+      font-size: 20px;
+    }
+  }
   .skills {
     justify-content: space-between;
     ul {
