added fonts, added shape, icon containter, bgc to sections

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,12 +17,12 @@
     color: inherit;
     transition: 0.6s;
     &:hover {
-      color: $first-color;
+      color: $forth-color;
     }
   }
   .logo {
     path {
-      fill: $second-color;
+      fill: $forth-color;
     }
   }
 
@@ -33,6 +33,6 @@
   }
 
   .active {
-    color: $first-color;
+    color: $forth-color;
   }
 }
