--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@
 $first-color: #99a8a8;
 $second-color: #e5eded;
 $third-color: #718e8e;
+$forth-color: #2d3047;
 
 //pallte 3
 // $first-color: #0e2a47;
