--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,14 +2,15 @@
 @import '../../scss/abstracts/mixins';
 
 .about {
-  padding-top: 60px;
   justify-content: space-around;
   color: $second-color;
   .profile-img {
-    width: 600px;
-    height: 800px;
-    margin: 15px;
+    width: 300px;
+    height: 300px;
+    background-size: 100%;
+    @include my-shape;
   }
+
   .info {
     width: 600px;
     line-height: 2;
@@ -31,18 +32,6 @@
     li {
       font-weight: 100;
       font-size: 20px;
-    }
-  }
-  .skills {
-    justify-content: space-between;
-    ul {
-      li {
-        padding: 10px;
-        width: 185px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
     }
   }
 
