--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,21 +4,29 @@
   .icons {
     justify-content: center;
     .icon-container {
-      display: flex;
-      background-color: $third-color;
-      margin: 15px;
-      padding: 20px;
-      border-radius: 15px;
       cursor: pointer;
       transition: 0.6s;
+      margin: 15px;
       &:hover {
         background-color: $second-color;
       }
     }
-
-    .icon {
-      fill: $first-color;
-      font-size: 35px;
+  }
+  .phone {
+    position: relative;
+    span {
+      position: absolute;
+      opacity: 1;
+      transition: 0.5s;
+      color: $second-color;
+      font-size: 10px;
+      width: 105px;
+      font-size: 16px;
+      transform: translate(0, 200%);
     }
+  }
+
+  .phone:hover > span {
+    opacity: 1;
   }
 }
