--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,10 +1,11 @@
 @import '../../scss/abstracts/variables';
 .hero {
-  height: 100vh;
+  height: 60vh;
   padding-top: 100px;
-  background-image: url('../../assets/bgc.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: $forth-color;
+  // background-image: url('../../assets/bgc.jpg');
+  // background-position: center;
+  // background-repeat: no-repeat;
   .title {
     padding: 40px;
   }
