--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -4,13 +4,18 @@
 .about {
   justify-content: space-around;
   color: $second-color;
-  .profile-img {
-    width: 300px;
-    height: 300px;
-    background-size: 100%;
-    @include my-shape;
+  .subtitle {
+    text-align: left;
   }
-
+  .img-container {
+    margin-right: 15px;
+    .img {
+      width: 300px;
+      height: 300px;
+      background-size: 100%;
+      @include my-shape;
+    }
+  }
   .info {
     width: 600px;
     line-height: 2;
@@ -37,12 +42,27 @@
 
   .advantages {
     padding: 20px 0 80px 0;
+
+    @include respon(tab-port) {
+      flex-direction: column;
+    }
     .adv-container {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
       margin: 10px;
       .adv {
         text-align: center;
         font-weight: 300;
       }
+    }
+  }
+
+  .footer {
+    display: flex;
+    @include respon(tab-port) {
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
