--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,28 +1,39 @@
 @import '../../scss/abstracts/variables';
+@import '../../scss/abstracts/mixins';
 
 .contact {
   .icons {
     justify-content: center;
+
+    @include respon(phone) {
+      flex-wrap: wrap;
+    }
     .icon-container {
       cursor: pointer;
       transition: 0.6s;
       margin: 15px;
+      background-color: $first-color;
+
       &:hover {
-        background-color: $second-color;
+        background-color: $third-color;
       }
     }
+    .icon {
+      fill: $second-color;
+    }
   }
+
   .phone {
     position: relative;
     span {
       position: absolute;
-      opacity: 1;
+      opacity: 0;
       transition: 0.5s;
       color: $second-color;
       font-size: 10px;
+      z-index: 5;
       width: 105px;
       font-size: 16px;
-      transform: translate(0, 200%);
     }
   }
 
