--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -99,6 +99,7 @@
   text-transform: uppercase;
   font-weight: 500;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .subtitle {
@@ -117,6 +118,11 @@
 
   background-color: $second-color;
   @include my-shape;
+
+  // @include respon(phone) {
+  //   width: 45px;
+  //   height: 45px;
+  // }
   .icon {
     fill: $first-color;
   }
