--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -17,7 +17,7 @@
     }
   }
   .info {
-    width: 600px;
+    // width: 600px;
     line-height: 2;
     margin: 15px;
   }
@@ -60,9 +60,9 @@
 
   .footer {
     display: flex;
+    align-items: center;
     @include respon(tab-port) {
       flex-direction: column;
-      align-items: center;
     }
   }
 }
