--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,7 +1,7 @@
 @import '../../scss/abstracts/variables';
 @import '../../scss/abstracts/mixins';
 .hero {
-  height: 60vh;
+  height: 100vh;
   padding-top: 100px;
   background-color: $forth-color;
   display: flex;
@@ -12,6 +12,9 @@
   // background-repeat: no-repeat;
   .title {
     padding: 40px;
+  }
+  .img {
+    width: 400px;
   }
 
   .btn {
@@ -124,4 +127,86 @@
     left: 10px;
   }
   //close animation-2
+}
+
+.animate-enter {
+  div {
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  div:first-of-type {
+    /* For increasing performance 
+                         ID/Class should've been used. 
+                         For a small demo 
+                         it's okaish for now */
+    animation: showup 7s infinite;
+  }
+
+  div:last-of-type {
+    width: 0px;
+    animation: reveal 7s infinite;
+  }
+
+  .enter-animate {
+    margin-left: -355px;
+    animation: slidein 7s infinite;
+  }
+}
+@keyframes showup {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes slidein {
+  0% {
+    margin-left: -800px;
+  }
+  20% {
+    margin-left: -800px;
+  }
+  35% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: 0px;
+  }
+}
+
+@keyframes reveal {
+  0% {
+    opacity: 0;
+    width: 0px;
+  }
+  20% {
+    opacity: 1;
+    width: 0px;
+  }
+  30% {
+    width: 355px;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    width: 355px;
+  }
+}
+
+p {
+  font-size: 12px;
+  color: #999;
+  margin-top: 200px;
 }
