--- a/src/components/ProjectPreview/ProjectPreview.scss
+++ b/src/components/ProjectPreview/ProjectPreview.scss
@@ -2,11 +2,22 @@
 @import '../../scss/abstracts/mixins';
 .projectPreview {
   width: 550px;
-  height: 550px;
+  height: 700px;
   margin: 15px;
 
+  @include respon(phone) {
+    height: 500px;
+  }
+
+  .desc {
+    height: 15%;
+    @include respon(phone) {
+      font-size: 2rem;
+    }
+  }
+
   .VueCarousel {
-    height: 90%;
+    height: 75%;
   }
   .VueCarousel-wrapper,
   .VueCarousel-inner {
@@ -14,7 +25,7 @@
   }
 
   .subtitle {
-    height: 10%;
+    height: auto;
     margin-bottom: 5px;
   }
   .preview-front {
@@ -23,7 +34,7 @@
 
     .proj-img {
       height: 100%;
-      @include my-shape;
+      // @include my-shape;
 
       width: 100%;
       object-fit: cover;
@@ -31,7 +42,7 @@
   }
 
   .preview-hover {
-    @include my-shape;
+    // @include my-shape;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
