--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,8 +2,9 @@
 // $first-color: #f7f7f7;
 // $second-color: #ff0083;
 // $third-color: #282828;
+// $forth-color: #cb793a;
 
-// pallte 2
+// // pallte 2
 $first-color: #99a8a8;
 $second-color: #e5eded;
 $third-color: #718e8e;
@@ -13,6 +14,7 @@ $forth-color: #2d3047;
 // $first-color: #0e2a47;
 // $second-color: #fbfcff;
 // $third-color: #1593ff;
+// $forth-color: #ff8cc6;
 
 //pallte 4
 // $first-color: #ffffff;
