--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -31,12 +31,19 @@
   .desc {
     line-height: 1.3;
 
+    .subsubtitle {
+      font-weight: 400;
+      margin-bottom: 15px;
+    }
     ul {
       list-style: square;
     }
     li {
       font-weight: 100;
       font-size: 20px;
+    }
+    li:not(:last-child) {
+      margin-bottom: 10px;
     }
   }
 
@@ -51,9 +58,13 @@
       align-items: center;
       flex-direction: column;
       margin: 10px;
+      & > div:not(:last-child) {
+        margin-bottom: 10px;
+      }
+
       .adv {
         text-align: center;
-        font-weight: 300;
+        font-weight: 100;
       }
     }
   }
