--- a/src/components/ProjectPreview/ProjectPreview.scss
+++ b/src/components/ProjectPreview/ProjectPreview.scss
@@ -11,6 +11,7 @@
 
   .desc {
     height: 15%;
+    margin-bottom: 10px;
     @include respon(phone) {
       font-size: 2rem;
     }
@@ -53,20 +54,6 @@
     align-items: center;
     justify-content: center;
     transition: 0.6s;
-    .skills-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      width: 90%;
-    }
-
-    .skill {
-      padding: 5px;
-      margin: 5px;
-      background-color: $second-color;
-      text-transform: uppercase;
-      color: $third-color;
-    }
 
     .btn-open {
       padding: 10px;
@@ -84,5 +71,20 @@
         background-color: $forth-color;
       }
     }
+  }
+
+  .skills-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
+  }
+
+  .skill {
+    padding: 5px;
+    margin: 5px;
+    background-color: $second-color;
+    text-transform: uppercase;
+    color: $third-color;
   }
 }
