--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -61,6 +61,12 @@
   src: url('assets/fonts/rubik/Rubik-Regular.ttf');
   font-weight: 400;
 }
+
+@font-face {
+  font-family: rubik;
+  src: url('assets/fonts/rubik/Rubik-Light.ttf');
+  font-weight: 100;
+}
 //heebo
 @font-face {
   font-family: heebo;
