--- a/src/components/ProjectPreview/ProjectPreview.scss
+++ b/src/components/ProjectPreview/ProjectPreview.scss
@@ -14,6 +14,10 @@
     margin-bottom: 10px;
     @include respon(phone) {
       font-size: 2rem;
+      padding: 0 20px;
+      font-size: 2rem;
+      max-width: 400px;
+      margin: 0 auto;
     }
   }
 
