--- a/src/components/ProjectPreview/ProjectPreview.scss
+++ b/src/components/ProjectPreview/ProjectPreview.scss
@@ -27,6 +27,9 @@
   .VueCarousel-wrapper,
   .VueCarousel-inner {
     height: 100% !important;
+    @include respon(phone) {
+      max-width: 400px;
+    }
   }
 
   .subtitle {
