some css changes due to update

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
-@import './scss/main.scss';
+@use './scss/abstracts/variables' as *;
+@use './scss/main.scss' as *;
 
 body {
   background-color: $first-color;
