--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,5 +1,5 @@
-@import '../../scss/abstracts/variables';
-@import '../../scss/abstracts/mixins';
+@use '../../scss/abstracts/variables' as *;
+@use '../../scss/abstracts/mixins' as *;
 
 .about {
   justify-content: space-around;
