--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,5 +1,5 @@
-@import '../../scss/abstracts/variables';
-@import '../../scss/abstracts/mixins';
+@use '../../scss/abstracts/variables' as *;
+@use '../../scss/abstracts/mixins' as *;
 
 .contact {
   .icons {
