--- a/src/components/ProjectPreview/ProjectPreview.scss
+++ b/src/components/ProjectPreview/ProjectPreview.scss
@@ -1,5 +1,5 @@
-@import '../../scss/abstracts/variables';
-@import '../../scss/abstracts/mixins';
+@use '../../scss/abstracts/variables' as *;
+@use '../../scss/abstracts/mixins' as *;
 .projectPreview {
   width: 550px;
   height: 700px;
